# git_well

./: .gitignore  .readthedocs.yml  CHANGELOG.md  PATCH_SUMMARY.md  README.rst  pyproject.toml  run_doctests.sh  run_linter.sh  run_tests.py  setup.py
.github/workflows/: release.yml  tests.yml
dev/: check_importtime.sh  ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  ipfs_dogfood_smoke.sh
dev/ipfs-test-content/: .gitignore  ipfs-info.ipfs  welcome-to-IPFS.jpg.ipfs
docs/source/: conf.py  git_well.__main__.rst  git_well._utils.rst  git_well.demo.rst  git_well.git_archive_source.rst  git_well.git_autoconf_gpgsign.rst  git_well.git_branch_cleanup.rst  git_well.git_branch_upgrade.rst  git_well.git_discover_remote.rst  git_well.git_rebase_add_continue.rst  git_well.git_remote_protocol.rst  git_well.git_squash_streaks.rst  git_well.git_stats.rst  git_well.git_sync.rst  git_well.git_track_upstream.rst  git_well.main.rst  git_well.repo.rst  git_well.rst  index.rst  modules.rst
git_well/: __init__.py  __main__.py  _repo_ext.py  _utils.py  _utils.pyi  demo.py  git_archive_source.py  git_autoconf_gpgsign.py  git_autoconf_gpgsign.pyi  git_branch_cleanup.py  git_branch_cleanup.pyi  git_branch_upgrade.py  git_branch_upgrade.pyi  git_discover_remote.py  git_discover_remote.pyi  git_rebase_add_continue.py  git_rebase_add_continue.pyi  git_remote_protocol.py  git_remote_protocol.pyi  git_squash.py  git_squash_streaks.py  git_squash_streaks.pyi  git_stats.py  git_stats.pyi  git_submodule_track.py  git_sync.py  git_sync.pyi  git_track_upstream.py  git_track_upstream.pyi  git_url_components.py  ipfs.py  main.py  main.pyi  repo.py  repo.pyi
git_well/demo/: __init__.py
git_well/patchdir/: git_patchdir_apply.py  git_patchdir_save.py  patchdir_modal.py
requirements/: optional.txt  runtime.txt  tests.txt
tests/: test_bugfixes.py  test_cli.py  test_import.py  test_ipfs.py
