[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "github", "purepy", "erotemic",]
mod_name = "git_well"
repo_name = "git_well"
rel_mod_parent_dpath = "."
os = [ "linux", "osx", "win",]
min_python = 3.7
version = "{mod_dpath}/__init__.py::__version__"
author = "Jon Crall"
author_email = "erotemic@gmail.com"
description = "The git_well module"
license = "Apache 2"
dev_status = "planning"
remote_host = "https://github.com"
remote_group = "Erotemic"

[tool.xcookie.entry_points]
console_scripts = [
    "git-well = git_well.__main__:main",
    "git-sync = git_well.git_sync:main",
    "git-branch-upgrade = git_well.git_branch_upgrade:main",
    "git-branch-cleanup = git_well.git_branch_cleanup:main",
    "git-squash-streaks = git_well.git_squash_streaks:main",
    "git-track-upstream = git_well.git_track_upstream:main",
]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "git_well/__main__.py", "*/setup.py",]
